# Habit-Tracker

./: .gitignore  browser.py  environment.yml  functional_tests.py  habit_tracker_spec.md  manage.py  mypy.ini  pyproject.toml
Backend/: environment.yml  main.py  manage.py  pyproject.toml
Backend/super_habit_tracker/: urls.py  wsgi.py
Backend/user_habit_tracker/: admin.py  apps.py  models.py  views.py
Backend/user_habit_tracker/migrations/: 0001_initial.py
Backend/user_habit_tracker/unit_tests/: test_models.py  test_views.py
accounts/: urls.py  views.py
accounts/unit_tests/: test_auth.py
frontend/: .prettierrc  package-lock.json  package.json
frontend/src/: api.ts
habit_todo_lists/: apps.py  urls.py  views.py
habit_todo_lists/templates/habit_todo_lists/: home.html  list.html
habit_tracker/: settings.py  urls.py
login/: apps.py  models.py  mypy.ini  signals.py  types.py  urls.py  views.py
login/migrations/: 0001_initial.py
login/templates/: home.html
super_habit_tracker/: asgi.py  settings.py  urls.py
user_habit_tracker/: admin.py  models.py  serializers.py  views.py
user_habit_tracker/migrations/: 0002_alter_habittrackeruser_author.py  0003_rename_user_habit_owner.py  0004_alter_habit_owner.py
user_habit_tracker/unit_tests/: test_models.py  test_serializers.py  test_views.py
